--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/bootcamp
 spring.datasource.username=root
-spring.datasource.password=Subhajit123@#
+spring.datasource.password=
+#Subhajit123@#
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql=true 
